update scope/thread local examples